src/a-easi-select/component.css
* {
    box-sizing: border-box;
}

:host {
    position: relative;
    display: inline-grid;
    grid-gap: var(--easi-grid-gap);
    grid-auto-columns: 1fr;
    grid-auto-flow: column;
}

label {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: calc(.5 * var(--easi-unit)) var(--easi-unit);
    background-color: var(--easi-lowlight);
    border: var(--easi-border);
    font-size: var(--easi-select-label-font-size);
}

label span{
  z-index: 1;
}

:host([disabled]) label {
    opacity: .333;
}

:host(:not([disabled])) label {
    cursor: pointer;
}

label:first-of-type {
    border-radius: var(--easi-border-radius) 0 0 var(--easi-border-radius);
}

label:last-of-type {
    border-radius: 0 var(--easi-border-radius) var(--easi-border-radius) 0;
}

:host(:not([disabled])) label[aria-checked] {
    background-color: var(--easi-checked-background);
    color: var(--easi-checked-color);
    outline: var(--easi-checked-outline);
}

